// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextArea > should render 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
    />
    <div
      class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 relative"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <textarea
          autocomplete="off"
          class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base resize-none min-h-[8rem] md:min-h-auto md:resize-y"
          data-testid="TextArea"
          style="height: 4px;"
          type="text"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render as disabled 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
    />
    <div
      class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 focus-within:ring-1 relative"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <textarea
          autocomplete="off"
          class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text"
          data-testid="TextArea"
          disabled=""
          type="text"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render as invalid 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
    />
    <div
      class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 relative"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <textarea
          aria-invalid="true"
          autocomplete="off"
          class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base resize-none min-h-[8rem] md:min-h-auto md:resize-y"
          data-testid="TextArea"
          type="text"
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 absolute bottom-full right-0 mb-2 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="text-theme-danger-500"
          >
            <div
              style="height: 20px; width: 20px;"
            >
              <svg
                id="circle-exclamation-mark"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 10.5v-5"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 14h0"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
